hphp/hack/test/typecheck/multiple_concrete_consts.php.exp
File "multiple_concrete_consts.php", line 3, characters 13-13:
I1 and I2 both declare ambiguous implementations of X. (Typing[4285])
File "multiple_concrete_consts.php", line 3, characters 13-13:
I1's definition is here.
File "multiple_concrete_consts.php", line 6, characters 13-13:
I2's definition is here.
File "multiple_concrete_consts.php", line 3, characters 13-13:
Redeclare X in I with a compatible signature.
